--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <title>svelte-readotron</title>
-    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='./index.css'>
     <script src="./index.js" type="module"></script>
 </head>
