--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>svelte-readotron</title>
-
-	<link rel='icon' type='image/png' href='./favicon.png'>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-	<link rel='stylesheet' href='./global.css'>
-	<link rel='stylesheet' href='./build/bundle.css'>
-
-	<script defer src='./build/bundle.js'></script>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width,initial-scale=1'>
+    <title>svelte-readotron</title>
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='./index.css'>
+    <script src="./index.js" type="module"></script>
 </head>
-
 <body>
 </body>
 </html>
