docs: Improve dev responsive

--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -7,6 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='./index.css'>
+    <style>
+        html, body {
+            width: 100vw;
+            margin: 0;
+            padding: 0;
+            font-family: Rubik, sans-serif;
+            font-size: 14px;
+        }
+    </style>
     <script src="./index.js" type="module"></script>
 </head>
 <body>
