--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href='./index.css'>
     <style>
         html, body {
-            width: 100vw;
+            width: 100%;
             margin: 0;
             padding: 0;
             font-family: Rubik, sans-serif;
